--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -78,11 +78,29 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '686575346277777');
+fbq('track', 'AddToCart');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=686575346277777&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '473175841592591');
 fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=473175841592591&ev=AddToCart&noscript=1"
+src="https://www.facebook.com/tr?id=473175841592591&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
@@ -93,7 +111,7 @@ src="https://www.facebook.com/tr?id=473175841592591&ev=AddToCart&noscript=1"
       <div id="primeira">
         <div class="question">
           <h1>Pregunta 1</h1>
-          <p>¿Quieres conocer el método para despertar las 7 hormonas adelgazantes en tu cuerpo?</p>
+          <p>¿Quieres conocer el método para despertar las hormonas adelgazantes en tu cuerpo?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="segunda()">SÍ</button>
@@ -134,7 +152,7 @@ src="https://www.facebook.com/tr?id=473175841592591&ev=AddToCart&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://manuelasanchez.site/" // SEU LINK AQUI
+      location.href = "https://fernandaquiroz.online/" // SEU LINK AQUI
     }
   </script>
 </body>
