--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -152,7 +152,7 @@ src="https://www.facebook.com/tr?id=473175841592591&ev=PageView&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://fernandaquiroz.online/" // SEU LINK AQUI
+      location.href = "https://manuelasanchez.site/" // SEU LINK AQUI
     }
   </script>
 </body>
